--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,3 @@
+/home/appuser/venv/bin/python -m pip install --upgrade pip
 pip install holoviz
 pip install --force-reinstall --no-deps bokeh==2.4.3
